[package]
name = "gadget-core"
version = "0.0.1"
authors = ["Thomas P Braun"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"

[features]
substrate = [
    "sp-runtime",
    "sc-client-api",
]

[dependencies]
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
hex = "0.4.3"
log = { workspace = true }
async-trait = "0.1.73"
auto_impl = "1.1.0"
futures = { workspace = true }

sp-runtime = { optional = true, workspace = true }
sc-client-api = { optional = true, workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"]}