[package]
name = "gadget-io"
version = "0.0.1"
license.workspace = true
edition = "2021"
description = "Tangle's gadget IO library for writing Tangle blueprints"
repository.workspace = true
homepage.workspace = true

[dependencies]
cfg-if = { workspace = true }
tracing = { workspace = true, default-features = false, features = ["log", "attributes"] }
hex = { workspace = true }
scale-info = { workspace = true}
parity-scale-codec = { workspace = true }
serde = { workspace = true }
sp-application-crypto = { workspace = true, default-features = false, features = ["full_crypto"] }
sp-core = { workspace = true, features = ["serde", "full_crypto"] }
multiaddr = { workspace = true, default-features = false }
url = { workspace = true, default-features = false, features = ["alloc", "serde"] }
thiserror = { workspace = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = [
    "time",
    "rt",
    "sync",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = { version = "0.4.42" }

serde-wasm-bindgen = { version = "0.6.5" }
js-sys = "0.3.69"
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }
wasmtimer = { version = "0.2" }

p256 = { workspace = true, features = ["alloc", "ecdsa"], default-features = false }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
sp-keystore = { workspace = true }
sc-keystore = { workspace = true }
structopt = "0.3.26"

[features]
default = ["std"]
std = [
    "dep:tokio",
    "sp-application-crypto/std",
    "tracing/std",
    "url/std",
]
wasm-bindgen = [
    "dep:wasm-bindgen",
]
typescript = [
    "dep:tsify",
    "wasm-bindgen",
]
