[package]
description = "Substrate network protocol"
name = "libp2p-gadget"
version = "0.34.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
documentation = "https://docs.rs/sc-network"
readme = "README.md"
workspace = ".."
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = "6.1"
async-channel = "1.8.0"
async-trait = "0.1"
asynchronous-codec = "0.6"
bytes = "1"
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
either = "1.5.3"
fnv = "1.0.6"
futures = "0.3.21"
futures-timer = "3.0.2"
ip_network = "0.4.1"
libp2p = { version = "0.51.4", features = ["dns", "identify", "kad", "macros", "mdns", "noise", "ping", "request-response", "tcp", "tokio", "websocket", "yamux"] }
linked_hash_set = "0.1.3"
log = "0.4.17"
mockall = "0.11.3"
parking_lot = "0.12.1"
partial_sort = "0.2.0"
pin-project = "1.0.12"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
smallvec = "1.11.0"
thiserror = "1.0"
tokio = { version = "1.22.0", features = ["macros", "sync"] }
tokio-stream = "0.1.7"
unsigned-varint = { version = "0.7.1", features = ["asynchronous_codec", "futures"] }
zeroize = "1.4.3"
prometheus-endpoint = { workspace = true }
sc-client-api = { workspace = true }
sc-network-common = { path = "common" }
sc-utils = { workspace = true }
sp-arithmetic = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
wasm-timer = "0.2"
auto_impl = { workspace = true }

[dev-dependencies]
assert_matches = "1.3"
mockall = "0.11.3"
multistream-select = "0.12.1"
rand = "0.8.5"
tempfile = "3.1.0"
tokio = { version = "1.22.0", features = ["macros"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
tokio-test = "0.4.2"
sc-network-light = { path = "light" }
sc-network-sync = { path = "sync" }
sp-test-primitives = { workspace = true }
sp-tracing = { workspace = true }
substrate-test-runtime = { workspace = true }
substrate-test-runtime-client = { workspace = true }

[features]
default = []
