[package]
name = "zk-playground"
version = "0.1.0"
authors = ["Shady Khalifa <dev+github@shadykhalifa.me>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"

[[example]]
name = "zk-test-client"
path = "examples/client.rs"

[[example]]
name = "zknode"
path = "examples/node.rs"

[[example]]
name = "certgen"
path = "examples/certgen.rs"

[features]
default = ["parallel"]
parallel = ["ark-std/parallel", "groth16/parallel", "rayon"]

[dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help"] }
anyhow = "1"
sync_wrapper = "0.1.2"
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
hex = "0.4.3"
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = "1"
async-trait = "0.1.73"
rcgen = "0.11.3"
rustls = "0.21.7"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rayon = { version = "1.8.0", optional = true }
rand = { version = "0.8", features = ["std"] }

sc-utils = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sp-runtime = { workspace = true }
sc-client-api = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
futures = { workspace = true }

zk-gadget = { workspace = true }
gadget-core = { workspace = true }
webb-gadget = { workspace = true }
mpc-net = { workspace = true }
groth16 = { workspace = true }
secret-sharing = { workspace = true }

# ARK Libraries
ark-std = {version = "0.4.0", features = [ "print-trace", "std" ]}
ark-crypto-primitives = {version = "0.4.0"}
ark-ff = {version = "0.4.0"}
ark-poly = {version = "0.4.0"}
ark-ec = {version = "0.4.0"}
ark-relations = { version = "0.4.0" }
ark-serialize = { version = "0.4.0", features = [ "derive" ] }
ark-groth16 = { version = "0.4.0" }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git" }

# ARK curves
ark-bn254 = {version = "0.4.0", features = ["curve"] }

[dev-dependencies]
