[package]
name = "gadget-sdk"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "SDK for building Blueprints and gadget on Tangle Network"
license.workspace = true


[dependencies]
elliptic-curve = { workspace = true, features = ["alloc", "sec1"] }
getrandom = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
lock_api = { workspace = true }
parking_lot = { workspace = true }
rand = { version = "0.8", default-features = false, features = ["alloc"] }
thiserror = { workspace = true }

# Keystore deps
ed25519-zebra = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "ecdsa-core", "arithmetic"] }
schnorrkel = { workspace = true }
w3f-bls = { workspace = true }
eigensdk-rs = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }

# Metrics deps
hyper = { workspace = true, features = ["http1", "server"] }
prometheus = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot", "process"] }

# Logging deps
log = { workspace = true }
tracing = { workspace = true }

# Networking deps
async-trait = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
gadget-core = { workspace = true, features = ["substrate"] }
gadget-common = { workspace = true, features = ["default"] }
gadget-io = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Substrate
sp-core = { workspace = true, features = ["full_crypto"] }
sp-io = { workspace = true }

# Event Watchers and Handlers
backoff = { workspace = true }
subxt = { workspace = true }
tangle-subxt = { workspace = true }

# EVM Event Watchers and Handlers
alloy-contract = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-pubsub = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }

# Macros
gadget-blueprint-proc-macro = { workspace = true }
derive_more = { workspace = true }

# Executor
failure = { workspace = true }
nix = { workspace = true }

# Benchmarking deps
sysinfo = { workspace = true }

structopt = { workspace = true }
tracing-subscriber = "0.2.25"
url = "2.5.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies.libp2p]
workspace = true
features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "yamux",
    "tcp",
    "quic",
    "request-response",
    "cbor",
    "identify",
    "kad",
    "dcutr",
    "relay",
    "ping",
    "dns",
    "autonat"
]

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
hyper = { workspace = true, features = ["client"] }

# [dev-dependencies]
# tangle-test-utils = { workspace = true }

[features]
default = ["std"]

std = [
    "getrandom",
    "hex/std",
    "rand/std",
    "rand/std_rng",
    "sp-io/std",
]
wasm = [
    "getrandom/js",
]

# Randomness
getrandom = ["rand/getrandom"]
