[package]
name = "gadget-sdk"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "SDK for building Blueprints and gadget on Tangle Network"
license.workspace = true


[dependencies]
auto_impl = { workspace = true }
elliptic-curve = { workspace = true, features = ["alloc", "sec1"] }
getrandom = { workspace = true, optional = true }
hex = { workspace = true, features = ["alloc"] }
http-body-util = { workspace = true, optional = true }
lock_api = { workspace = true }
nix = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"], optional = true }
parking_lot = { workspace = true, optional = true }
rand = { workspace = true, features = ["alloc"] }
thiserror = { workspace = true }
structopt = { workspace = true }
url = { workspace = true, features = ["serde"] }
failure = { workspace = true }

# Keystore deps
ed25519-zebra = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "ecdsa-core", "arithmetic"] }
schnorrkel = { workspace = true }
w3f-bls = { workspace = true }
eigensdk = { workspace = true }
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
subxt-core = { workspace = true, features = ["substrate-compat"] }

# Metrics deps
hyper = { workspace = true, features = ["http1", "server"], optional = true }
hyper-util = { workspace = true, features = ["server"], optional = true }
prometheus = { workspace = true }
tokio = { workspace = true, optional = true }

# Logging deps
log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "tracing-log"] }
tracing = { workspace = true, features = ["log"] }

# Networking deps
async-trait = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
gadget-io = { workspace = true }
round-based = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Substrate
sp-core = { workspace = true, features = ["full_crypto"] }
sp-io = { workspace = true }

# Event Watchers and Handlers
backon = { workspace = true, optional = true }
subxt = { workspace = true, optional = true, features = ["substrate-compat"] }
subxt-signer = { workspace = true, features = ["sr25519"] }
tangle-subxt = { workspace = true }

# EVM Event Watchers and Handlers
alloy-contract = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-signer-local = { workspace = true }

eigensdk-rs = { workspace = true }

# Macros
gadget-blueprint-proc-macro = { workspace = true, default-features = false }
gadget-context-derive = { workspace = true, default-features = false }

# Benchmarking deps
sysinfo = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies.libp2p]
workspace = true
features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "yamux",
    "tcp",
    "quic",
    "request-response",
    "cbor",
    "identify",
    "kad",
    "dcutr",
    "relay",
    "ping",
    "dns",
    "autonat",
]

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
hyper = { workspace = true, features = ["client"] }

# [dev-dependencies]
# tangle-test-utils = { workspace = true }

[features]
default = ["std"]

std = [
    "dep:alloy-provider",
    "dep:backon",
    "dep:parking_lot",
    "dep:hyper",
    "dep:hyper-util",
    "dep:subxt",
    "dep:tokio",
    "backon/tokio-sleep",
    "dep:getrandom",
    "gadget-io/std",
    "hex/std",
    "http-body-util",
    "nix",
    "rand/std",
    "rand/std_rng",
    "sp-io/std",
    "sqlx",
    "subxt/native",
    "tangle-subxt/std",
    "tokio/rt-multi-thread",
    "tokio/parking_lot",
    "tokio/process",
    "gadget-blueprint-proc-macro/std",
]
wasm = [
    "dep:backon",
    "dep:subxt",
    "dep:tokio",
    "backon/gloo-timers-sleep",
    "gadget-io/wasm-bindgen",
    "getrandom?/js",
    "subxt/web",
    "tangle-subxt/web",
]

# Randomness
getrandom = ["dep:getrandom", "rand/getrandom"]
