[package]
name = "shell-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "shell-sdk/std",
    "gadget-common/std",
    "gadget-io/std"
]
wasm = [
    "shell-sdk/wasm",
    "gadget-common/wasm",
    "gadget-io/wasm"
]

[dependencies]
sp-core = { workspace = true }
shell-sdk = { workspace = true }
gadget-common = { workspace = true }
gadget-io = { workspace = true }
color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace", "issue-url"] }
serde = { workspace = true }
structopt = { workspace = true }
tangle-subxt = { workspace = true }
toml = "0.8.11"
hex = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "signal"] }
reqwest = { version = "0.12.3" }
sha2 = { workspace = true }
tangle-environment = { workspace = true }
