[package]
name = "shell-sdk"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"

[features]

[dependencies]
color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace", "issue-url"] }
async-trait = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi"] }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true, features = ["serde"] }
log = { workspace = true }

gadget-core = { workspace = true }
gadget-common = { workspace = true }

sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true }
sp-application-crypto = { workspace = true }

sc-keystore = { workspace = true }

scale-info = { workspace = true }
parity-scale-codec = { workspace = true }

serde = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
structopt = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }

pallet-jobs-rpc-runtime-api = { workspace = true }
pallet-jobs = { workspace = true }
pallet-dkg = { workspace = true }
pallet-zksaas = { workspace = true }
tangle-primitives = { workspace = true }
tangle-subxt = { workspace = true }

[dependencies.libp2p]
workspace = true
features = [
  "tokio",
  "gossipsub",
  "mdns",
  "noise",
  "macros",
  "yamux",
  "tcp",
  "quic",
  "request-response",
  "cbor",
  "identify",
  "kad",
  "dcutr",
  "relay",
  "ping",
  "dns",
    "autonat"
]

[dev-dependencies]
test-utils = { workspace = true }
