[package]
name = "shell-sdk"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"

[features]
default = ["std"]
std = [
  "gadget-common/default",
  "gadget-io/default",
  "sc-keystore",
  "sp-core/default",
  "sp-io/default",
  "sp-application-crypto/default",
]
wasm = [
  "gadget-common/wasm",
  "gadget-io/wasm",
  "sp-core/serde",
  "sp-core/full_crypto",
  "sp-io/disable_panic_handler",
  "sp-io/disable_oom",
  "sp-io/disable_allocator",
  "sp-application-crypto/serde",
  "sp-application-crypto/full_crypto",
  "wasm-bindgen",
  "getrandom/js",
  "wasm-bindgen-futures",
  "tsify",
  "serde-wasm-bindgen",
  "js-sys",
  "console_error_panic_hook",
  "console_log",
  "anyhow",
]

[dependencies]
# WASM Specific Dependencies
wasm-bindgen = { version = "0.2.92", optional = true }
getrandom = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
tsify = { version = "0.4.5", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
js-sys = { version = "0.3.69", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
anyhow = { version = "1.0.81", optional = true }
console_log = { version = "1.0.0", optional = true }

# STD Specific Dependencies
sc-keystore = { workspace = true, optional = true }

# Shared Dependencies
matchbox_socket = "0.9.0"
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"]}
log = { version = "0.4", default-features = false }
gadget-core = { workspace = true }
gadget-common = { workspace = true, default-features = false, features = ["tangle-testnet"] }
gadget-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-keystore = { workspace = true }
sp-application-crypto = { workspace = true, default-features = false }
tangle-subxt = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
color-eyre = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "tracing-log"] }
url = { workspace = true, features = ["serde"] }
toml = "0.8.11"
serde = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
tokio_with_wasm = "0.4.3"
structopt = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
env_logger = { workspace = true }

# Pallets
pallet-jobs-rpc-runtime-api = { workspace = true, features = ["default"] }
pallet-jobs = { workspace = true, features = ["default"] }
pallet-dkg = { workspace = true }
pallet-zksaas = { workspace = true }
tangle-primitives = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies.libp2p]
workspace = true
features = [
  "tokio",
  "gossipsub",
  "mdns",
  "noise",
  "macros",
  "yamux",
  "tcp",
  "quic",
  "request-response",
  "cbor",
  "identify",
  "kad",
  "dcutr",
  "relay",
  "ping",
  "dns",
  "autonat"
]

[target.'cfg(target_family = "wasm")'.dependencies.libp2p]
workspace = true
default-features = false

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
test-utils = { workspace = true }
