[package]
name = "test-gadget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gadget-core = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# zk deps
mpc-net = { workspace = true }
dist-primitives = { workspace = true }
secret-sharing = { workspace = true }
bytes = { version = "1.5.0", features = ["serde"]}
ark-std = {version = "0.4.0", features = [ "print-trace", "std" ]}
ark-ec = {version = "0.4.0"}
ark-bls12-377 = { version = "0.4.0", features = ["curve"] }
ark-ff = {version = "0.4.0"}
ark-poly = {version = "0.4.0"}
bincode2 = "2.0.1"
hex = "0.4.3"
md5 = "0.7.0"
