[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }

sp-io = { workspace = true }